@@ -1,5 +1,6 @@
 0.188
 
+- Limit the total size of server.log by log.max-history * log.max-size
 - Fix IndexOutOfBounds when updating t-digest after copy.
 - Remove status message support from HTTP client.
 - Update to Jetty 9.4.24.v20191120.
